# low-carbon-london

./: .gitignore  01_clean.ipynb  LICENSE  README.md  Untitled.ipynb  prep.py  pyproject.toml
notebook/eda/: 01_clean.ipynb  02_weather.ipynb  Untitled.ipynb  Untitled1.ipynb
src/: __init__.py
src/preparation/: weather.py
