[tool.poetry]
name = "low-carbon-london"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
dask = {extras = ["dataframe", "distributed"], version = "^2.11.0"}
pandas = "^1.0.1"
numpy = "^1.18.1"
jupyterlab = "^2.0.0"
matplotlib = "^3.2.0"
xarray = "^0.15.0"
bokeh = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
