[tool.poetry]
name = "low-carbon-london"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyWavelets = "^1.1.1"
PyArrow = "^1.0.1"

[tool.poetry.dev-dependencies]
pyspark = "^3.0.0"
jupyterlab = "^2.2.4"
pandas = "^1.1.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
